package it.unibo.samplejavafx.mvc.model.rules;

/**
 * An enum containing all the possible scenarios regarding the ability to castle during a game of chess.
 */
public enum CastleCondition {
    NO_CASTLE,
    CASTLE_LEFT,
    CASTLE_RIGHT,
    CASTLE_BOTH
}
