@startuml AdvancedRules

skinparam classAttributeIconSize 0
hide empty fields
hide empty methods

class AdvancedRules {
    +{static}check( . . . ) : GameState
    +{static}checkmate( . . . ) : GameState
    +{static}draw( . . . ) : GameState
    +{static}castle( . . . ) : CastleCondition
}

class CheckCalculator <<Utility>> {
    +{static}getInterposingPieces( . . . ) : Map<Piece, List<Point2D>>
    +{static}getLineOfSight( . . . ) : List<Point2D>
    +{static}getAttackers( . . . ) : List<Piece>
    +{static}isMoveSafe( . . . ) : boolean
}

class RulesUtils <<Utility>> {
    +{static}hasNotMoved( . . . ) : boolean
    +{static}underAttack( . . . ) : Optional<Piece>
    +{static}kingPossibleMoves( . . . ) : List<Point2D>
    +{static}getPiecesOfColor( . . . ) : Set<Optional<Entity>>
    +{static}getKing( . . . ) : Optional<Piece>
    +{static}swapColor(currentColor : PlayerColor) : PlayerColor 
}

enum CastleCondition {
    NO_CASTLE
    CASTLE_LEFT
    CASTLE_RIGHT
    CASTLE_BOTH
}
class TurnHandlerImpl
TurnHandlerImpl ..> AdvancedRules
TurnHandlerImpl ..> RulesUtils
TurnHandlerImpl ..> CheckCalculator
AdvancedRules ..> CheckCalculator
AdvancedRules o-- CastleCondition
AdvancedRules ..> RulesUtils

@enduml
